Listo borrador del capitulo 3

--- a/report/apendices/apendiceA.tex
+++ b/report/apendices/apendiceA.tex
@@ -116,8 +116,7 @@
 (so-forall (?T 1 @ist)
     (exists (?y @cls)
         (forall (?x @var)
-            (or
-                (and (?N ?x ?y)
+            (or (and (?N ?x ?y)
                      (?T ?x)
                 )
                 (and (?P ?x ?y)
@@ -127,7 +126,7 @@
              ))))
 \end{verbatim}
 
-\section{\qEA-QBF, \textit{Quantified Boolean Formula}}
+\section{\qEA-QBF, Fórmula \textit{booleana} cuantificada $\Sigma_p^2$}
 \begin{verbatim}
 (so-exists (?E0 1 @ise0)
     (so-forall (?A0 1 @isa0)
