--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -189,3 +189,10 @@
     pages = {283--292},
     publisher = {IOS Press}
 }
+
+@Book{cormen:algorithms,
+  author = "T. Cormen and C. Leiserson and R. Rivest",
+  title = "Introduction to Algorithms",
+  year = "1990",
+  publisher = "MIT Press"
+}
