--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -223,15 +223,14 @@ Complejidad, Inteligencia Artificial.
 \setstretch{1.3}  % Reset the line-spacing to 1.3 for body text (if it has changed)
 
 % The Acknowledgements page, for thanking everyone
-\acknowledgements{
-\addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
-Agradecimientos aquí.
-}
+%\acknowledgements{
+%\addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
+%Agradecimientos aquí.
+%}
 
-\clearpage  % End of the Acknowledgements
+%\clearpage  % End of the Acknowledgements
 
 \pagestyle{fancy}  %The page style headers have been "empty" all this time, now use the "fancy" headers as defined before to bring them back
-
 
 %% ----------------------------------------------------------------
 \lhead{\emph{Índice General}}  % Set the left side page header to "Contents"
